complete 3,4