@@ -1,25 +1,25 @@
 package ru.t1.java.demo.service.impl;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.kafka.support.KafkaHeaders;
-import org.springframework.messaging.Message;
-import org.springframework.messaging.support.MessageBuilder;
 import org.springframework.stereotype.Service;
 import ru.t1.java.demo.aop.annotation.LogDataSourceError;
 import ru.t1.java.demo.aop.annotation.Metric;
 import ru.t1.java.demo.dto.AccountDto;
 import ru.t1.java.demo.dto.ResponseTransactionDto;
 import ru.t1.java.demo.dto.TransactionDto;
-import ru.t1.java.demo.exception.TransactionStatusException;
-import ru.t1.java.demo.validateTransaction.kafka.KafkaTransactionAcceptProducer;
+import ru.t1.java.demo.kafka.KafkaTransactionAcceptProducer;
 import ru.t1.java.demo.model.Transaction;
+import ru.t1.java.demo.model.enums.AccountStatus;
 import ru.t1.java.demo.model.enums.TransactionStatus;
 import ru.t1.java.demo.repository.TransactionRepository;
+import ru.t1.java.demo.service.AccountService;
 import ru.t1.java.demo.service.TransactionService;
+import ru.t1.java.demo.util.AccountMapper;
 import ru.t1.java.demo.util.TransactionMapper;
 
 import java.io.File;
@@ -37,8 +37,10 @@ import java.util.stream.Collectors;
 public class TransactionServiceImpl implements TransactionService {
     private final TransactionRepository transactionRepository;
     private final TransactionMapper transactionMapper;
-    private final AccountServiceImpl accountServiceImpl;
+    private final AccountService accountService;
     private final KafkaTransactionAcceptProducer kafkaTransactionAcceptProducer;
+    private final AccountMapper accountMapper;
+    private final ObjectMapper objectMapper;
 
     @PostConstruct
     void init() {
@@ -55,7 +57,7 @@ public class TransactionServiceImpl implements TransactionService {
     @LogDataSourceError
     @Metric
     public TransactionDto createTransaction(Transaction transaction) {
-        transaction.setTransactionDate(LocalDateTime.now().toString());
+        transaction.setTransactionDate(LocalDateTime.now());
         return transactionMapper.toDto(transactionRepository.save(transaction));
     }
 
@@ -66,7 +68,7 @@ public class TransactionServiceImpl implements TransactionService {
     public void deleteTransaction(Long transactionId) {
         log.debug("Call method deleteClient with id {}", transactionId);
         if (transactionId == null){
-            throw new NoSuchElementException("Transaction id is null");
+            throw new IllegalArgumentException("Transaction id cannot be null");
         }
         transactionRepository.deleteById(transactionId);
     }
@@ -105,9 +107,7 @@ public class TransactionServiceImpl implements TransactionService {
     }
     @Override
     public List<Transaction> parseJson() throws IOException {
-        ObjectMapper mapper = new ObjectMapper();
-
-        TransactionDto[] clients = mapper.readValue(new File("src/main/resources/MOCK_DATA_TRANSACTION.json"), TransactionDto[].class);
+        TransactionDto[] clients = objectMapper.readValue(new File("src/main/resources/MOCK_DATA_TRANSACTION.json"), TransactionDto[].class);
 
         return Arrays.stream(clients)
                 .map(transactionMapper::toEntity)
@@ -117,54 +117,76 @@ public class TransactionServiceImpl implements TransactionService {
     @Override
     @Transactional
     @LogDataSourceError
-    @Metric
-    public List<TransactionDto> registerTransactions(List<TransactionDto> transactions) {
-        List<Transaction> savedList = transactionRepository.saveAll(transactions.stream()
-                .map(transactionMapper::toEntity)
-                .collect(Collectors.toList()));
-        return savedList.stream().map(transactionMapper::toDto).collect(Collectors.toList());
+    public List<ResponseTransactionDto> validateAndProcessTransaction(List<TransactionDto> transactions) {
+        return transactions.stream().map(this::validateAndSaveTransaction).toList();
     }
 
     @Override
-    @Transactional
-    @LogDataSourceError
-    @Metric
-    public List<ResponseTransactionDto> validateAndProcessTransaction(List<TransactionDto> transactions) {
+    public List<TransactionDto> saveResultTransactions(List<ResponseTransactionDto> transactions) {
         return transactions.stream().map(this::saveTransactionAndChangeBalance).toList();
     }
+    private TransactionDto saveTransactionAndChangeBalance(ResponseTransactionDto transaction) {
+        TransactionDto transactionDto = getTransaction(transaction.getTransactionId());
+        AccountDto account = accountService.getAccount(transaction.getAccountId());
 
-    private ResponseTransactionDto saveTransactionAndChangeBalance(TransactionDto transactionDto) {
-        validateTransactionAccept(transactionDto);
-        AccountDto account = accountServiceImpl.getAccount(transactionDto.getAccountId());
+        if (transaction.getStatus().equals(TransactionStatus.ACCEPTED)) {
+            transactionDto.setStatus(TransactionStatus.ACCEPTED);
+            account.setBalance(account.getBalance().add(transaction.getAmount()));
+            account.setAccountStatus(AccountStatus.OPEN);
+        } else if (transaction.getStatus().equals(TransactionStatus.BLOCKED)) {
+            account.setBalance(account.getBalance().add(transaction.getAmount()));
+            transactionDto.setStatus(TransactionStatus.BLOCKED);
+            account.setAccountStatus(AccountStatus.BLOCKED);
+            account.setFrozenBalance(account.getFrozenBalance().add(transaction.getAmount()));
+        } else if (transaction.getStatus().equals(TransactionStatus.REJECTED)) {
+            log.info("Account {} cannot proceed with the transaction. Insufficient balance: {} required, but only {} available.",
+                    transaction.getAccountId(), transaction.getAmount(), account.getBalance());
+        }
+
+        Transaction resultTransaction = transactionRepository.save(transactionMapper.toEntity(transactionDto));
+        accountService.createAccount(accountMapper.toEntity(account));
+        return transactionMapper.toDto(resultTransaction);
+    }
+
+    private ResponseTransactionDto validateAndSaveTransaction(TransactionDto transactionDto) {
+        if (!accountService.getAccount(transactionDto.getAccountId()).getAccountStatus().equals(AccountStatus.OPEN)) {
+            log.info("Ошибка при отправке сообщения, статс аккаунта {} должен быть OPEN", transactionDto.getAccountId());
+            throw new IllegalArgumentException(String.format("Account with id = {} status is not OPEN", transactionDto.getAccountId()));
+        }
+        AccountDto account = accountService.getAccount(transactionDto.getAccountId());
         transactionDto.setStatus(TransactionStatus.REQUESTED);
-        transactionRepository.save(transactionMapper.toEntity(transactionDto));
+        Transaction transaction = transactionRepository.save(transactionMapper.toEntity(transactionDto));
 
         ResponseTransactionDto responseTransactionDto = ResponseTransactionDto.builder()
                 .accountId(transactionDto.getAccountId())
                 .balance(account.getBalance())
                 .amount(transactionDto.getAmount())
                 .clientId(account.getClientId())
-                .transactionId(transactionDto.getId())
-                .timestamp(LocalDateTime.now().toString())
+                .transactionId(transaction.getId())
+                .timestamp(transactionDto.getTransactionDate())
+                .status(TransactionStatus.REQUESTED)
                 .build();
 
-        Message<String> message = MessageBuilder
-                .withPayload(responseTransactionDto.toString())
-                .setHeader("transaction_accept","RESPONSE_TRANSACTION")
-                .setHeader(KafkaHeaders.TOPIC,"t1_demo_transaction_accept")
-                .build();
-        try {
-            kafkaTransactionAcceptProducer.send(message.toString());
-        } catch (Exception ex) {
-            log.info("Произошла ошибка при отправке сообщения, ошибка сохранена в базу");
-        }
+        sendToKafka(convertToJson(responseTransactionDto));
+
         return responseTransactionDto;
     }
 
-    private void validateTransactionAccept(TransactionDto transaction) {
-        if (!transaction.getStatus().equals(TransactionStatus.ACCEPTED)){
-            log.error("Transaction with id = {} status not equal ACCEPTED", transaction.getId());
-            throw new TransactionStatusException("Transaction status have to be ACCEPTED");
+    private String convertToJson(ResponseTransactionDto responseTransactionDto) {
+        try {
+            return objectMapper.writeValueAsString(responseTransactionDto);
+        } catch (JsonProcessingException e) {
+            log.error("Ошибка сериализации в JSON", e);
+            throw new RuntimeException("Ошибка сериализации", e);
+        }
+    }
+
+    private void sendToKafka(String message) {
+        try {
+            kafkaTransactionAcceptProducer.send(message);
+        } catch (Exception ex) {
+            log.error("Ошибка при отправке сообщения в Kafka", ex);
+            throw new IllegalStateException("Не удалось отправить сообщение в Kafka", ex);
         }
     }
 }
